syntax = "proto3";

package konvoy.mesh.v1alpha1;

option go_package = "v1alpha1";

import "mesh/v1alpha1/dataplane.proto";
import "mesh/v1alpha1/dataplane_insight.proto";
import "gogoproto/gogo.proto";

// DataplaneInspection defines the projected state of a Dataplane.
message DataplaneInspection {

  Dataplane dataplane = 1 [ (gogoproto.nullable) = false ];

  DataplaneInsight dataplane_insight = 2 [ (gogoproto.nullable) = false ];
}
